# kronsteen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py
src/kronsteen/: __init__.py  _version.py  actions.py  client.py  config.py  exceptions.py  finders.py  launcher.py  logging_config.py  models.py  ocr.py  ocr_tesseract.py  regions.py  utils.py  vision.py  window_monitor.py
